<resources>
    <string name="app_name">iHealth</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Sectiuni</string>
    <string name="covid">Covid-19</string>
    <string name="tracing">Tracing</string>
    <string name="profile">Profilul meu</string>
    <string name="bmi">Calculator BMI</string>
    <string name="note">Notite</string>
    <string name="certificat">Certificat COVID-19</string>
    <string name="suport">Suport Tehnic</string>
    <string name="setari">Setari</string>
    <string name="logout">Iesire din cont</string>
    <string name="welcome">Bine ai venit</string>
    <string name="description_home_frag">Ținta ta pentru astăzi este să  păstrezi o mentalitate pozitivă.</string>
    <string name="alege_specialitate">Alege o specialitate, si ramai informat</string>
    <string name="categori">Vezi toate categoriile</string>
    <string name="mai_multe">Mai multe detalii</string>
    <string name="asistent">Asistent Virtual</string>
    <string name="asistent_description">Afla rapid posibilele cauze ale simptomelor tale.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Array of categories from Home -->

    <string name="andrologie">ANDROLOGIE</string>
    <string name="boli_infectioase">BOLI INFECTIOASE</string>
    <string name="cardolgie">CARDOLOGIE</string>
    <string name="chirurgie_crdv">CHIRURGIE CARDIOVASCULARA</string>
    <string name="dermato">DERMATOVENOROLOGIE</string>
    <string name="diabet">DIABET ZAHARAT, NUTRITIE SI BOLI METABOLICE</string>
    <string name="ecografie">ECOGRAFIE</string>
    <string name="endocrinologie">ENDOCRINOLOGIE</string>
    <string name="epidemiologie">EPIDEMIOLOGIE</string>
    <string name="settings_and_preferences"><![CDATA[Setari & Preferinte]]></string>
    <string name="notificari">Notificari</string>
    <string name="languages">Limba</string>
    <string name="security">Securitate</string>
    <string name="dark_mode">Tema intunecata</string>
    <string name="help_center">Centrul de ajutor</string>
    <string name="raport_bug">Raportare probleme</string>

    <!-- BMI STRINGS -->

    <string name="severe_thinness">Foarte slab</string>
    <string name="moderate_thinness">Moderat</string>
    <string name="mild_thinness">Usor moderat</string>
    <string name="normal_thinness">Greutate normala</string>
    <string name="overweight">Supraponderal</string>
    <string name="obese_class_1">Obez clasa I</string>
    <string name="obese_class_2">Obez clasa II</string>
    <string name="obese_class_3">Obez clasa III</string>

    <string name="_18_5_25_kg_m2">18.5 – 25 kg/m²</string>
    <string name="normal_bmi_range">Interval normal BMI:</string>
    <string name="recalculate">Recalculate your BMI</string>
    <string name="calculate">Calculează BMI</string>
    <string name="weight">GREUTATE</string>
    <string name="age">VARSTA</string>
    <string name="height"> ÎNĂLȚIME</string>
    <string name="male">Barbat</string>
    <string name="female">Femeie</string>
    <string name="plus">plus</string>
    <string name="minus">minus</string>
    <string name="_0cm">0cm</string>
    <string name="_50">50</string>
    <string name="_19">1</string>
    <string name="your_result">Rezultat</string>
    <string name="cm">cm</string>
    <string name="share">Distribuie rezultatul</string>
    <string name="your_age">Varsta:</string>
    <string name="cannot_zero">Înălțimea nu poate fi zero</string>
    <string name="choose_gender">Trebuie sa alegi genul!</string>
    <string name="age_100">Varsta nu poate fi mai mare de 100</string>
    <string name="age_zero">Varsta nu poate fi mai mica de 1</string>
    <string name="weight_zero">Greutatea nu poate fi mai mica de 1</string>
    <string name="weight_300">Greutatea nu poate fi mai mare de 300</string>
    <string name="teenage">Teenage</string>
    <string name="adult">Adult</string>
    <string name="under_18">A BMI of under 18.5 indicates that a person has insufficient weight, so they may need to put on some weight. They should ask a doctor or dietitian for advice.</string>
    <string name="under_24">A BMI of 18.5–24.9 indicates that a person has a healthy weight for their height. By maintaining a healthy weight, they can lower their risk of developing serious health problems.</string>
    <string name="tasks">Tasks</string>
    <string name="notes">My Notes</string>
    <string name="bottom_bar">bottom_bar</string>
    <string name="search_notes">Search notes</string>


    <!-- NOTES -->

    <string name="snackbarok">OK</string>
    <string name="storage_permission_text">This App Needs access to your Storage.</string>
    <string name="my_notes">My Notes</string>
    <string name="date">Date</string>
    <string name="notes_title">Notes Title</string>
    <string name="https">https://</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="enter_notes_here">Enter Notes Here</string>
    <string name="mynotes">My Notes</string>

    <string name="noteID">noteId</string>
    <string name="url_require">Url is Required</string>
    <string name="url_validation">Url is not Valid</string>
    <string name="title_require">Title is Required</string>
    <string name="empty_note_description_warning">Notes Description Must Not Be Empty</string>

    <string name="action">action</string>
    <string name="bottom_sheet_action">bottom_sheet_action</string>
    <string name="selected_color">selectedColor</string>

    <string name="blue">Blue</string>
    <string name="cyan">Cyan</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="purple">Purple</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="brown">Brown</string>
    <string name="indigo">Indigo</string>
    <string name="image">Image</string>
    <string name="webUrl">WebUrl</string>
    <string name="deleteNote">DeleteNote</string>
    <string name="fab">fab</string>
    <string name="search">Search a note..</string>
    <string name="notes_sub_title">Notes Sub Title</string>
    <string name="notes_desc">Enter Note Here</string>
    <string name="web_url">Enter Web Url</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_web_link">Add Web Link</string>
    <string name="delete_note">Delete Note</string>
    <string name="change_image_profile">Change image profile</string>
    <string name="user_name">User name</string>
    <string name="prenume">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="save_data">Save</string>
</resources>