<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_tracing"
        android:icon="@drawable/stats_24"
        android:title="@string/tracing" />

    <item
        android:id="@+id/navigation_bmi"
        android:icon="@drawable/calculator_24"
        android:title="@string/bmi"/>

    <item
        android:id="@+id/navigation_notes"
        android:icon="@drawable/edit_24"
        android:title="@string/note"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings_24"
        android:title="@string/setari"/>

</menu>