<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="usg.ihealth.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_categoriesFragment"
            app:destination="@id/categoriesFragment"
            app:popUpTo="@anim/nav_default_pop_enter_anim"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_covid"
        android:name="usg.ihealth.ui.covid.CovidFragment"
        android:label="@string/covid"
        tools:layout="@layout/fragment_covid" />

    <fragment
        android:id="@+id/navigation_tracing"
        android:name="usg.ihealth.ui.tracing.TracingFragment"
        android:label="@string/tracing"
        tools:layout="@layout/fragment_tracing" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="usg.ihealth.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/categoriesFragment"
        android:name="usg.ihealth.ui.home.CategoriesFragment"
        android:label="Categorii"
        tools:layout="@layout/fragment_categories" >
    </fragment>

</navigation>