<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.dashboard.DashboardFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile"
        android:layout_width="188dp"
        android:layout_height="57dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="11dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/profile"
            android:textColor="@color/verde_03"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/user_24" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/calculator_bmi"
        android:layout_width="188dp"
        android:layout_height="57dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="9dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="11dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/bmi"
            android:textColor="@color/verde_03"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/calculator_24" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/medici"
        android:layout_width="188dp"
        android:layout_height="57dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="11dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/note"
            android:textColor="@color/verde_03"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/edit_24" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/note"
        android:layout_width="188dp"
        android:layout_height="57dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="9dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/medici"
        app:layout_constraintTop_toBottomOf="@+id/calculator_bmi">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="11dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/certificat"
            android:textColor="@color/verde_03"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/covid_19" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/suport_tehnic"
        android:layout_width="188dp"
        android:layout_height="57dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medici">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="11dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/suport"
            android:textColor="@color/verde_03"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/suport" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/setari_aplicatie"
        android:layout_width="188dp"
        android:layout_height="57dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="9dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/suport_tehnic"
        app:layout_constraintTop_toBottomOf="@+id/note">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="11dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/setari"
            android:textColor="@color/verde_03"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/api_24" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/logout"
        android:layout_width="188dp"
        android:layout_height="57dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="11dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/rosu"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setari_aplicatie">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="11dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/log_out" />

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>